[gd_scene load_steps=2 format=3 uid="uid://bgameover123"]

[ext_resource type="Script" uid="uid://faaolk3wje5a" path="res://game_over.gd" id="1_gameover"]

[node name="GameOver" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_gameover")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.6
anchor_right = 0.5
anchor_bottom = 0.6
offset_left = -100.0
offset_top = -98.0
offset_right = 100.0
offset_bottom = 102.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverTitle" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
text = "GAME OVER"
horizontal_alignment = 1

[node name="ScoreDisplay" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Final Score: 0"
horizontal_alignment = 1

[node name="HighScoreDisplay" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
text = "High Score: 0"
horizontal_alignment = 1

[node name="NewHighScoreLabel" type="Label" parent="Control/VBoxContainer"]
visible = false
layout_mode = 2
text = "NEW HIGH SCORE!"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="QuitButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Quit"
